// @generated
// This file is automatically generated by Kanel. Do not modify manually.

import type { default as ContactStatus } from './ContactStatus';
import type { default as ContactSubscriptions } from './ContactSubscriptions';

/** Identifier type for public.contacts */
export type ContactsUuid = string & { __brand: 'ContactsUuid' };

/**
 * Represents the table public.contacts
 * Stores contact details including leads, prospects, and customers.
 */
export default interface Contacts {
  /** Universally unique identifier for the contact. */
  uuid: ContactsUuid;

  /** Primary email used for contact identification and communication. */
  email: string;

  /** Stage of the contact in the sales funnel: lead, prospect, or customer. */
  status: ContactStatus;

  /** List of subscriptions assigned to the contact. */
  subscriptions: ContactSubscriptions[] | null;

  /** User who created the record. */
  created_by: string;

  /** Timestamp when the record was created. */
  created_date: Date;

  /** User who last updated the record. */
  updated_by: string;

  /** Timestamp when the record was last updated. */
  updated_date: Date;

  /** User who deleted the record. */
  deleted_by: string | null;

  /** Timestamp when the record was deleted. */
  deleted_date: Date | null;

  /** Stores the list of email identifiers (e.g., "welcome", "20250401_newsletter") that have been sent to the contact by the system. */
  sent_emails: string[] | null;
}

/**
 * Represents the initializer for the table public.contacts
 * Stores contact details including leads, prospects, and customers.
 */
export interface ContactsInitializer {
  /**
   * Universally unique identifier for the contact.
   * Default value: uuid_generate_v4()
   */
  uuid?: ContactsUuid;

  /** Primary email used for contact identification and communication. */
  email: string;

  /** Stage of the contact in the sales funnel: lead, prospect, or customer. */
  status: ContactStatus;

  /** List of subscriptions assigned to the contact. */
  subscriptions?: ContactSubscriptions[] | null;

  /** User who created the record. */
  created_by: string;

  /** Timestamp when the record was created. */
  created_date: Date;

  /** User who last updated the record. */
  updated_by: string;

  /** Timestamp when the record was last updated. */
  updated_date: Date;

  /** User who deleted the record. */
  deleted_by?: string | null;

  /** Timestamp when the record was deleted. */
  deleted_date?: Date | null;

  /** Stores the list of email identifiers (e.g., "welcome", "20250401_newsletter") that have been sent to the contact by the system. */
  sent_emails?: string[] | null;
}

/**
 * Represents the mutator for the table public.contacts
 * Stores contact details including leads, prospects, and customers.
 */
export interface ContactsMutator {
  /** Universally unique identifier for the contact. */
  uuid?: ContactsUuid;

  /** Primary email used for contact identification and communication. */
  email?: string;

  /** Stage of the contact in the sales funnel: lead, prospect, or customer. */
  status?: ContactStatus;

  /** List of subscriptions assigned to the contact. */
  subscriptions?: ContactSubscriptions[] | null;

  /** User who created the record. */
  created_by?: string;

  /** Timestamp when the record was created. */
  created_date?: Date;

  /** User who last updated the record. */
  updated_by?: string;

  /** Timestamp when the record was last updated. */
  updated_date?: Date;

  /** User who deleted the record. */
  deleted_by?: string | null;

  /** Timestamp when the record was deleted. */
  deleted_date?: Date | null;

  /** Stores the list of email identifiers (e.g., "welcome", "20250401_newsletter") that have been sent to the contact by the system. */
  sent_emails?: string[] | null;
}
